split artwork as a feature module. updated tests