@@ -1,22 +1,19 @@
 plugins {
-    alias(libs.plugins.android.application)
+    alias(libs.plugins.android.library)
     alias(libs.plugins.kotlin.android)
     alias(libs.plugins.kotlin.compose)
     alias(libs.plugins.kotlin.serialization)
 }
 
 android {
-    namespace = "com.kirilpetriv.showcase"
+    namespace = "com.kirilpetriv.artwork"
     compileSdk = 35
 
     defaultConfig {
-        applicationId = "com.kirilpetriv.showcase"
         minSdk = 24
-        targetSdk = 35
-        versionCode = 1
-        versionName = "1.0"
 
         testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles("consumer-rules.pro")
     }
 
     buildTypes {
@@ -42,35 +39,40 @@ android {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    // Fix for transitive dependency issue with ByteBuddy
+    jvmArgs("-Dnet.bytebuddy.experimental=true")
 }
 
 dependencies {
-    implementation(libs.androidx.core.ktx)
-    implementation(libs.androidx.lifecycle.runtime.ktx)
-    implementation(libs.androidx.activity.compose)
-    implementation(platform(libs.androidx.compose.bom))
 
+    implementation(libs.androidx.core.ktx)
+    implementation(libs.androidx.appcompat)
+    implementation(libs.material)
+    testImplementation(libs.junit)
+    androidTestImplementation(libs.androidx.junit)
+    androidTestImplementation(libs.androidx.espresso.core)
+
+    implementation(platform(libs.androidx.compose.bom))
+    implementation(libs.androidx.activity.compose)
     implementation(libs.androidx.ui)
     implementation(libs.androidx.ui.graphics)
     implementation(libs.androidx.ui.tooling.preview)
     implementation(libs.androidx.material3)
-    testImplementation(libs.junit)
-    androidTestImplementation(libs.androidx.junit)
-    androidTestImplementation(libs.androidx.espresso.core)
-    androidTestImplementation(platform(libs.androidx.compose.bom))
-    androidTestImplementation(libs.androidx.ui.test.junit4)
-    debugImplementation(libs.androidx.ui.tooling)
-    debugImplementation(libs.androidx.ui.test.manifest)
 
-    implementation(libs.androidx.navigation.compose)
+    implementation(libs.androidx.paging.compose)
+    implementation(libs.androidx.paging.ktx)
+    testImplementation(libs.androidx.paging.testing)
+
     implementation(platform(libs.koin.bom))
     implementation(libs.koin.core)
     implementation(libs.koin.android)
+
     implementation(libs.kotlin.serialization)
     implementation(libs.koin.androidx.compose)
     implementation(libs.koin.androidx.viewmodel)
     implementation(libs.koin.androidx.compose.navigation)
     implementation(libs.ui.coil)
+
     testImplementation(libs.mockk)
     testImplementation(libs.kotlin.test.coroutines)
     testImplementation(libs.kotlin.test.junit5)
@@ -78,10 +80,7 @@ dependencies {
     androidTestImplementation(libs.androidx.runner)
     androidTestImplementation(libs.ui.test.junit4)
 
-    testImplementation(libs.androidx.paging.testing)
-    implementation(libs.androidx.paging.compose)
-
+    implementation(project(":data"))
     implementation(project(":model"))
-    implementation(project(":artwork"))
     implementation(project(":domain"))
 }
